--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,11 @@ h1,h2,h3,h4,h5,h6,p,ul {
     color: var(--secondary-text-color-theme-light);
 }
 
+img {
+    display: block;
+    max-width: 100%;
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -85,7 +90,6 @@ h1,h2,h3,h4,h5,h6,p,ul {
     text-decoration: none;
 
     color: var(--logo-color);
-    margin-right: 93px;
     display: block;
 }
 
@@ -96,6 +100,7 @@ h1,h2,h3,h4,h5,h6,p,ul {
 .navigation .logo {
     padding-top: 24px;
     table-layout: 25px;
+    margin-right: 93px;
 }
 
 /* Site nav */
@@ -232,6 +237,8 @@ h1,h2,h3,h4,h5,h6,p,ul {
 
 .section {
     display: block;
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .section-title {
@@ -259,37 +266,39 @@ color: var(--primary-text-color-theme-light);
 
 /* Feature list */
 
-.feature {
-    padding-top: 94px;
-    padding-bottom: 47px;
-}
-
 .feature-list {
     display: flex;
-    gap: 30px;
+    flex-basis: calc((100% - 3 * 30px) / 4);
+}
+
+.feature-title {
+    margin-bottom: 10px;
 }
 
 /* Work */
 
 .work {
-    padding-top: 47px;
-    padding-bottom: 94px;
+    padding-top: 0;
+}
+
+.work-title {
+    margin-bottom: 50px;
 }
 
 .work-list {
     display: flex;
     flex-wrap: wrap;
-    padding-top: 50px;
     gap: 30px;
 }
 
 /* Our Team */
 
 .team {
-    padding-top: 94px;
-    padding-bottom: 94px;
-
     background-color: var(--third-background-color);
+}
+
+.team-title {
+    margin-bottom: 50px;
 }
 
 .team-list {
@@ -298,7 +307,6 @@ color: var(--primary-text-color-theme-light);
 }
 
 .team-card {
-    margin-top: 50px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
@@ -361,8 +369,15 @@ color: var(--primary-text-color-theme-light);
 /* PORTFOLIO */
 /* ==================================== */
 
-.site-choise-btn {
-    font-family: var(--primary-font);
+.portfolio-list {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    margin-bottom: 50px;
+}
+
+.portfolio-btn {
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -371,20 +386,30 @@ color: var(--primary-text-color-theme-light);
 
     background-color: var(--third-background-color);
     color: var(--primary-text-color-theme-light);
+    border: transparent;
+    border-radius: 4px;
+    padding: 6px 22px;
 }
 
-.site-choise-btn:hover,
-.site-choise-btn:focus {
+.portfolio-btn:hover,
+.portfolio-btn:focus {
     background-color: var(--accent-color);
     color: var(--primary-text-color-theme-dark);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.site {
+.site-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+/* .site {
     width: 370px;
     height: 404px;
     left: 215px;
     top: 262px;
-}
+} */
 
 .site-name {
     font-weight: 700;
