--- a/css/styles.css
+++ b/css/styles.css
@@ -154,10 +154,6 @@ img {
     margin-left: 293px;
 }
 
-.contact-list .contact-item {
-    margin-left: 50px;
-}
-
 .contact-item {
     font-weight: 500;
     font-size: 14px;
@@ -171,6 +167,10 @@ img {
 .contact-item .contact-phone {
     padding-top: 32px;
     padding-bottom: 32px;
+}
+
+.contact-item .contact-email {
+    padding-right: 50px;
 }
 
 .contact-email,
@@ -272,7 +272,11 @@ color: var(--primary-text-color-theme-light);
 
 .feature-list {
     display: flex;
-    flex-basis: calc((100% - 3 * 30px) / 4);
+    gap: 30px;
+}
+
+.feature-item {
+    width: 270px;
 }
 
 .feature-title {
@@ -327,6 +331,7 @@ color: var(--primary-text-color-theme-light);
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .team-job-title {
@@ -364,7 +369,7 @@ color: var(--primary-text-color-theme-light);
     color: var(--primary-text-color-theme-dark);
 }
 
-.contact-footer a {
+.contact-footer {
     margin-top: 9px;
     color: var(--third-text-color-theme-dark);
 }
@@ -411,7 +416,13 @@ color: var(--primary-text-color-theme-light);
 .site {
     width: 370px;
     height: 404px;
-    border: 1px solid #EEEEEE;
+    /* border: 1px solid #EEEEEE; */
+}
+
+.site-container {
+    border-right: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
 }
 
 .site-name {
