hw03 send for verification
hw03 send for verification

--- a/css/styles.css
+++ b/css/styles.css
@@ -422,7 +422,7 @@ color: var(--primary-text-color-theme-light);
 .site-container {
     border-right: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
-    border-right: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;
 }
 
 .site-name {
